Fix organizations logos on small screen(#194)

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -52,9 +52,8 @@
 }
 
 #fb-logo{
-  height: 175px;
+  height: 100px;
   width: 160px;
-  padding-bottom:30%;
 }
 
 #mapillary-logo{
@@ -69,12 +68,10 @@
 
 #draper-logo {
   height: 110px;
-  padding-bottom:5%;
 }
 
 #ebay-logo{
-  padding-top:5%;
-  height: 80px;
+  height: 90px;
   width:160px;
 }
 
